<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preferences">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/title_change_application" >

        <android.support.v7.preference.Preference
            android:key="change_application"
            android:summary="@string/summary_change_application"
            android:title="@string/title_change_application" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/permissions" >

        <android.support.v7.preference.Preference
            android:key="geoloc_permission"
            android:summary="@string/summary_geoloc_permission"
            android:title="@string/title_geoloc_permission" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/map_settings" >

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="undetected_beacons"
            android:summary="@string/summary_undetected_beacons"
            android:title="@string/title_undetected_beacons" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/title_app_infos" >
        <android.support.v7.preference.Preference
            android:key="app_version"
            android:title="@string/title_app_version" />
        <android.support.v7.preference.Preference
            android:key="indoorlocation_sdk_version"
            android:title="@string/title_indoorlocation_sdk_version" />
        <android.support.v7.preference.Preference
            android:key="update_settings"
            android:title="@string/sync_ubudu_manager" />
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>